got the badges to show but not pretty and consistently

--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -2,10 +2,17 @@
     --blueBkg: #314E52;
     --blue: #092640;
     --orange: #F2A154;
-    --orangeBkg: #F2A154;
     --grey: #E7E6E1;
     --light: #F7F6E7;
   }
+
+.btn {
+    background-color: var(--orange) !important;
+    margin: 2px;
+}
+h1, h2, h3, h4 {
+    color: var(--orange) !important;
+}
 
 .dashboardContent {
     display: flex;
