--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -6,11 +6,6 @@
     --light: #F7F6E7;
   }
 
-.listBadge {
-        width: 20px;
-        height: auto;
-}
-
 .btn {
     background-color: var(--orange) !important;
     margin: 2px;
@@ -29,19 +24,25 @@ h2, h3, h4 {
     display: flex;
     flex-direction: row;
 }
-.left {
-    width: auto;
-}
-.right {
-    width: auto;
+
+.column {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    flex: 1 1 0px;
+    justify-content: center;
 }
+
 .bi {
     margin: 10px;
 }
 
 .badgesForUser {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.listBadge {
 
 }
